<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_icon"
        android:title="@string/search" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/heart_icon"
        android:title="@string/favorites" />
    <item
        android:id="@+id/responsesFragment"
        android:title="@string/responses"
        android:icon="@drawable/responses_icon"/>
    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/messages_icon"
        android:title="@string/messages" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />

</menu>